# bulk-image-rename

./: .gitignore  README.md  images.txt  pyproject.toml
bulk_image_rename/: caption_rename.py  cli.py  download_images.py  main.py
tmp/: caption_rename.py
